#76 - Fix elements in video carousel overlapping Youtube's control buttons

--- a/src/hanusovedni/static/sass/_festival.scss
+++ b/src/hanusovedni/static/sass/_festival.scss
@@ -177,6 +177,9 @@
     .video-invites-carousel {
       .carousel-control-prev, .carousel-control-next {
         visibility: hidden;
+        height: 30px;
+        top: 50%;
+        bottom: 50%;
       }
 
       &:hover {
